src/test/deca/syntax/invalid/test_synt/hello_world/commentaire_fin_de_fichier.deca
// Description:
//    Un "faux" commentaire: un /* sans */.
//    Le commentaire n'ayant pas de */, ce n'est donc pas un commentaire:
//    c'est un / suivi d'un * ...
//
//    [Lexicographie], Commentaires, p54:
//    Un commentaire « classique » commence par '/*' et termine par '*/'. Le commentaire s’arrête au
//    premier '*/' suivant le début du commentaire.
//
// Resultats:
//    Pas d'erreur pour le lexeur.
//    Erreur de syntaxe ligne 20:0.
//
// Historique:
//    cree le 05/01/2022

{
        println("Bonjour");
}
/* commentaire multiligne
sans fermeture